game main menu graphics

--- a/public/js/app/templates/gameView.html
+++ b/public/js/app/templates/gameView.html
@@ -1,21 +1,26 @@
 <div class="container">
 
-    <div class="header">
-        <h3 class="text-muted">Bowling game</h3>
-    </div>
-
     <div class="jumbotron">
-        <h1>Game options</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-
+        <h1>Bowling game</h1>
+        <hr>
         <p>
-            <button id="start-game" type="button" class="btn btn-lg btn-success">
-                <span class="glyphicon glyphicon-ok"></span> START GAME
+            <button id="start-game" type="button" class="btn btn-lg btn-primary">
+                <span class="glyphicon glyphicon-ok"></span> NEW GAME
+            </button>
+        </p>
+        <p>
+            <button id="start-multiplayer" type="button" class="btn btn-lg btn-primary">
+                <span class="glyphicon glyphicon-user"></span> MULTIPLAYER
             </button>
         </p>
         <p>
             <button id="game-options" type="button" class="btn btn-lg btn-primary">
                 <span class="glyphicon glyphicon-cog"></span> OPTIONS
+            </button>
+        </p>
+        <p>
+            <button id="exit-game" type="button" class="btn btn-lg btn-primary">
+                <span class="glyphicon glyphicon-remove"></span> EXIT
             </button>
         </p>
     </div>
