--- a/public/js/app/templates/gameView.html
+++ b/public/js/app/templates/gameView.html
@@ -1,27 +1,10 @@
 <div class="container">
 
     <div class="jumbotron">
-        <h1>Bowling game</h1>
+        <h1>Game View</h1>
         <hr>
         <p>
-            <button id="start-game" type="button" class="btn btn-lg btn-primary">
-                <span class="glyphicon glyphicon-ok"></span> NEW GAME
-            </button>
-        </p>
-        <p>
-            <button id="start-multiplayer" type="button" class="btn btn-lg btn-primary">
-                <span class="glyphicon glyphicon-user"></span> MULTIPLAYER
-            </button>
-        </p>
-        <p>
-            <button id="game-options" type="button" class="btn btn-lg btn-primary">
-                <span class="glyphicon glyphicon-cog"></span> OPTIONS
-            </button>
-        </p>
-        <p>
-            <button id="exit-game" type="button" class="btn btn-lg btn-primary">
-                <span class="glyphicon glyphicon-remove"></span> EXIT
-            </button>
+
         </p>
     </div>
 
