--- a/public/js/app/templates/multiplayerView.html
+++ b/public/js/app/templates/multiplayerView.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
+<div class="container">
 
-</body>
-</html>
+    <div class="jumbotron">
+        <h1>Multiplayer View</h1>
+        <hr>
+        <p>
+
+        </p>
+    </div>
+
+</div>
