--- a/public/css/desktop.css
+++ b/public/css/desktop.css
@@ -1,5 +1,4 @@
 /* desktop.css */
 @import url("bootstrap.css");
 @import url("commonstyles.css");
-@import url("jumbotron-narrow.css");
-
+@import url("bowling.css");
