--- a/public/js/app/templates/gameMenu.html
+++ b/public/js/app/templates/gameMenu.html
@@ -1,28 +1,13 @@
 <div class="container">
 
-    <div class="jumbotron">
+    <div class="">
         <h1>Bowling game</h1>
         <hr>
         <p>
-            <button id="start-game" type="button" class="btn btn-lg btn-primary">
-                <span class="glyphicon glyphicon-ok"></span> NEW GAME
-            </button>
+            <button id="start-game" type="button" class="btn btn-lg btn-default">Quick start</button>
+            <button id="start-multiplayer" type="button" class="btn btn-lg btn-default">Multiplayer</button>
         </p>
-        <p>
-            <button id="start-multiplayer" type="button" class="btn btn-lg btn-primary">
-                <span class="glyphicon glyphicon-user"></span> MULTIPLAYER
-            </button>
-        </p>
-        <p>
-            <button id="game-options" type="button" class="btn btn-lg btn-primary">
-                <span class="glyphicon glyphicon-cog"></span> OPTIONS
-            </button>
-        </p>
-        <p>
-            <button id="exit-game" type="button" class="btn btn-lg btn-primary">
-                <span class="glyphicon glyphicon-remove"></span> EXIT
-            </button>
-        </p>
+        <hr>
     </div>
 
 </div>
